Cleanup ToolTextureMatcher and improve fixing with no texinfo
Motivated by #179. When no texinfo is available, texture fixing often fails. This is because tooltextures often require surface flags to be matched, which are unknown to us when no texinfo is available.
This commit changes the process to ignore surface flags if we don't have texinfo.